--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -74,14 +74,14 @@
       <div id="div-forms">
 
         <!-- Begin # Login Form -->
-        <form id="login-form">
+        <form id="login-form" action="/users/authenticate_user" method="POST">
           <div class="modal-body">
             <div id="div-login-msg">
               <div id="icon-login-msg" class="glyphicon glyphicon-chevron-right"></div>
               <span id="text-login-msg">Type your username and password.</span>
             </div>
-            <input id="login_username" class="form-control" type="text" placeholder="Username" required/>
-            <input id="login_password" class="form-control" type="password" placeholder="Password" required/>
+            <input id="login_username" name="username" class="form-control" type="text" placeholder="Username" required/>
+            <input id="login_password" name="password" class="form-control" type="password" placeholder="Password" required/>
             <div class="checkbox">
               <label>
                 <input type="checkbox"> Remember me
@@ -335,6 +335,8 @@
             msgChange($('#div-login-msg'), $('#icon-login-msg'), $('#text-login-msg'), "error", "glyphicon-remove", "Login error");
           } else {
             msgChange($('#div-login-msg'), $('#icon-login-msg'), $('#text-login-msg'), "success", "glyphicon-ok", "Login OK");
+            return true;
+            break;
           }
           return false;
           break;
