Working on creating E-mails

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -75,7 +75,7 @@
                   </li>
                   <li><a href="/view_drug_menu"><i class="icon-user"></i> View Entries </a>
                   </li>
-                  <li><a href="#"><i class="icon-gear"></i> Settings </a>
+                  <li><a href="/settings_menu"><i class="icon-gear"></i> Settings </a>
                   </li>
                   <li class="divider"></li>
                   <li><a href="/logout"><i class="icon-signout"></i> Logout </a>
