--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -50,7 +50,7 @@
         <!-- Logo -->
 
         <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top" role="navigation">
+        <nav class="navbar navbar-fixed-top" role="navigation" style="margin-left: -5px;">
 
 
           <div class="navbar-custom-menu">
@@ -93,7 +93,7 @@
 
 
       <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
+      <div class="content-wrapper" style="padding-top: 70px;">
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
